--- a/laurenthoman-site/index.html
+++ b/laurenthoman-site/index.html
@@ -147,7 +147,7 @@
         <a href="#projects">Projects</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
-        <a href="/RESUME - LAUREN THOMAN (2).pdf" class="btn" rel="noopener">Resume</a>
+        <a href="/RESUME%20-%20LAUREN%20THOMAN%20(2).pdf" class="btn" rel="noopener">Resume</a>
       </nav>
     </div>
   </header>
@@ -231,9 +231,9 @@
         <p>Download or view in browser</p>
       </div>
       <div class="panel">
-        <a class="btn" href="/RESUME - LAUREN THOMAN (2).pdf" target="_blank" rel="noopener">Download resume PDF</a>
-        <object data="/RESUME - LAUREN THOMAN (2).pdf" type="application/pdf" width="100%" height="480">
-          <p>Your browser can display the PDF; you can also <a href="/RESUME - LAUREN THOMAN (2).pdf" target="_blank" rel="noopener">open it here</a></p>
+        <a class="btn" href="/RESUME%20-%20LAUREN%20THOMAN%20(2).pdf" target="_blank" rel="noopener">Download resume PDF</a>
+        <object data="/RESUME%20-%20LAUREN%20THOMAN%20(2).pdf" type="application/pdf" width="100%" height="480">
+          <p>Your browser can display the PDF; you can also <a href="/RESUME%20-%20LAUREN%20THOMAN%20(2).pdf" target="_blank" rel="noopener">open it here</a></p>
         </object>
       </div>
     </section>
@@ -267,7 +267,7 @@
     // Year
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    const PLACEHOLDER = 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1600" height="900" viewBox="0 0 1600 900"><defs><linearGradient id="g" x1="0" y1="0" x2="1" y2="1"><stop stop-color="%230b1220"/><stop offset="1" stop-color="%2310213a"/></linearGradient></defs><rect fill="url(%23g)" width="1600" height="900"/><text x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle" fill="%2394a3b8" font-family="Inter,Arial,sans-serif" font-size="32">Project cover</text></svg>';
+    const PLACEHOLDER = 'data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"1600\" height=\"900\" viewBox=\"0 0 1600 900\"><defs><linearGradient id=\"g\" x1=\"0\" y1=\"0\" x2=\"1\" y2=\"1\"><stop stop-color=\"%230b1220\"/><stop offset=\"1\" stop-color=\"%2310213a\"/></linearGradient></defs><rect fill=\"url(%23g)\" width=\"1600\" height=\"900\"/><text x=\"50%25\" y=\"50%25\" dominant-baseline=\"middle\" text-anchor=\"middle\" fill=\"%2394a3b8\" font-family=\"Inter,Arial,sans-serif\" font-size=\"32\">Project cover</text></svg>';
 
     // Project data
     const projects = [
@@ -396,14 +396,14 @@
         const card = document.createElement('article');
         card.className = 'card';
         card.innerHTML = `
-          <div class="thumb"><img src="\${p.cover || PLACEHOLDER}" alt="\${p.title} cover" loading="lazy" onerror="this.src=PLACEHOLDER" \/><\/div>
+          <div class="thumb"><img src="${p.cover || PLACEHOLDER}" alt="${p.title} cover" loading="lazy" onerror="this.src=PLACEHOLDER"></div>
           <div class="card-body">
             <h3>${p.title}</h3>
-            <div class="tags">${(p.tags||[]).map(t => `<span class='tag'>${t}</span>`).join('')}</div>
+            <div class="tags">${(p.tags || []).map(t => `<span class='tag'>${t}</span>`).join('')}</div>
             <p>${p.blurb}</p>
-          ${p.milestone ? `<p class="milestone"><strong>Milestone:<\/strong> ${p.milestone}</p>` : ''}
-        </div>
-        <div class="links">
+            ${p.milestone ? `<p class="milestone"><strong>Milestone:</strong> ${p.milestone}</p>` : ''}
+          </div>
+          <div class="links">
             ${p.play ? `<a class="btn" href="${p.play}" target="_blank" rel="noopener">Play</a>` : ''}
             ${p.code ? `<a class="btn" href="${p.code}" target="_blank" rel="noopener">Code</a>` : ''}
           </div>
