--- a/laurenthoman-site/index.html
+++ b/laurenthoman-site/index.html
@@ -167,7 +167,7 @@
       </div>
       <div class="hero-card">
         <div class="thumb" aria-label="featured project image">
-          <img src="assets/xr-proto.jpg" alt="Hero image representing XR and game design" />
+          <img src="assets/hero-img.jpg" alt="Hero image representing XR and game design" />
         </div>
         <div class="statbar">
           <div class="stat"><strong>4</strong><span>playable builds</span></div>
