--- a/laurenthoman-site/index.html
+++ b/laurenthoman-site/index.html
@@ -351,7 +351,7 @@
         code: ''
       },
       {
-        title: 'Entrepreneurship product: MEGALOSTAND',
+        title: 'Entrepreneurship & Product Design',
         blurb: 'Concept to listing, design and launch of small products and visuals.',
         cover: 'assets/entrepreneurship.jpg',
         tags: ['Design', 'Product'],
