--- a/laurenthoman-site/index.html
+++ b/laurenthoman-site/index.html
@@ -341,7 +341,7 @@
         code: ''
       },
       {
-        title: 'Short film',
+        title: 'The World Off the Screen',
         blurb: 'Short film to bring awareness to teen mental health and social media, focus on narrative pacing and music choices.',
         cover: 'assets/short-film.jpg',
         tags: ['Film', 'Editing'],
