--- a/laurenthoman-site/index.html
+++ b/laurenthoman-site/index.html
@@ -111,7 +111,7 @@
     @media (max-width: 900px) {
       .hero { grid-template-columns: 1fr }
       .about { grid-template-columns: 1fr }
-      <card { grid-column: span 6 }>
+      .card { grid-column: span 6 }
     }
     @media (max-width: 640px) {
       .menu { display: none }
@@ -166,7 +166,7 @@
       </div>
       <div class="hero-card">
         <div class="thumb" aria-label="featured project image">
-          <img src="assets/hero-img.jpg" alt="Hero image representing XR and game design" />
+          <img src="assets/hero-img.jpg" alt="Hero image representing XR and game design" onerror="this.src=PLACEHOLDER" />
         </div>
         <div class="statbar">
           <div class="stat"><strong>4</strong><span>playable builds</span></div>
@@ -216,11 +216,11 @@
       <div class="panel">
         <h3>Currently exploring</h3>
         <ul>
-          <li><strong>IDSN 538, VisionOS prototype:</strong> Unity six point two with PolySpatial, target VisionOS twenty six, simulate on Apple Vision Pro in lab, build with Xcode.</li>
-          <li><strong>CTIN 489, Puzzle Parkour:</strong> vertical slice for one level, parkour feel, window washing minigames, title screen, menu UI, narrative and art.</li>
+          <li><strong>Snap Spectacles Prototyping, ACAD 207:</strong> Iovine and Young Academy course led by Carsten Becker; semester long collaboration with Snap to prototype immersive narrative driven experiences and apps using Snap Spectacles and Lens Studio.</li>
+          <li><strong>Visual Effects Workflow, School of Cinematic Arts:</strong> learning the full VFX pipeline with Photoshop, Maya, and Nuke; designing and compositing original shots for class deliverables.</li>
         </ul>
         <h3 style="margin-top:12px">Recognition</h3>
-        <p>Indie jam showcases, campus demo days, community features.</p>
+        <p>Indie jam showcases, class critiques and demos, campus exhibitions, collaborative studio presentations.</p>
       </div>
     </section>
 
@@ -259,37 +259,59 @@
   </footer>
 
   <script>
-    // Year
     document.getElementById('year').textContent = new Date().getFullYear();
 
     const PLACEHOLDER = 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1600" height="900" viewBox="0 0 1600 900"><defs><linearGradient id="g" x1="0" y1="0" x2="1" y2="1"><stop stop-color="%230b1220"/><stop offset="1" stop-color="%2310213a"/></linearGradient></defs><rect fill="url(%23g)" width="1600" height="900"/><text x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle" fill="%2394a3b8" font-family="Inter,Arial,sans-serif" font-size="32">Project cover</text></svg>';
 
-    // Project data
+    const LINKEDIN_PROJECTS = 'https://www.linkedin.com/in/laurenathoman/details/projects/';
+
     const projects = [
-      // Current work
       {
-        title: 'Puzzle Parkour, CTIN 489',
-        blurb: 'Unity puzzle platformer, vertical slice for one level with parkour and window washing minigames.',
-        milestone: 'Title screen, art assets for the main character and items, level design, menu UI, narrative design.',
-        cover: 'assets/puzzle-parkour.jpg',
-        tags: ['Unity', 'C#', 'Design'],
-        categories: ['current','games'],
-        status: 'current',
-        play: 'https://www.linkedin.com/in/laurenathoman/details/projects/',
-        code: ''
-      },
-      {
-        title: 'XR Prototype, IDSN course',
-        blurb: 'Design phase, planning an XR prototype for Apple Vision Pro or Quest using Unity and Xcode.',
-        milestone: 'Design in progress, builds to follow.',
-        cover: 'assets/xr-proto.jpg',
-        tags: ['XR', 'Unity', 'Xcode'],
+        title: 'Snap Spectacles Prototyping, ACAD 207',
+        blurb: 'Semester long collaboration with Snap to prototype immersive narrative driven experiences and experimental apps using Snap Spectacles and Lens Studio.',
+        milestone: 'Concept pitches, interaction prototypes, rapid iteration, user testing and weekly builds.',
+        cover: 'assets/snap-spectacles.jpg',
+        tags: ['Lens Studio', 'Snap Spectacles', 'Prototype'],
         categories: ['current','xr'],
         status: 'current',
-        play: 'https://www.linkedin.com/in/laurenathoman/details/projects/',
+        play: LINKEDIN_PROJECTS,
         code: ''
       },
-      // Past work
+      {
+        title: 'Visual Effects Workflow, SCA',
+        blurb: 'Learning the full VFX pipeline and shot workflow, from planning to compositing, using Photoshop, Maya, and Nuke to build original effects shots.',
+        milestone: 'Green screen fundamentals, roto and paint, matchmove basics, compositing passes, final shot polish.',
+        cover: 'assets/vfx-workflow.jpg',
+        tags: ['Nuke', 'Maya', 'Photoshop'],
+        categories: ['current','film'],
+        status: 'current',
+        play: LINKEDIN_PROJECTS,
+        code: ''
+      },
+
+      {
+        title: 'Reflections',
+        blurb: 'Final project for Intermediate Game Design and Production, built with a partner across the semester in Unity, focused on clean feel, readable signals, and rapid iteration.',
+        milestone: 'Title screen, movement polish, first pass art, menu UI, narrative beats.',
+        cover: 'assets/reflections.jpg',
+        tags: ['Unity', 'C#', 'Design'],
+        categories: ['games'],
+        status: 'past',
+        play: LINKEDIN_PROJECTS,
+        code: ''
+      },
+      {
+        title: 'NeuraGaze, Apple Vision Pro App Prototype',
+        blurb: 'VisionOS prototype exploring gaze based interaction and spatial UI, designed and pitched as a team concept with iterative testing and presentation deliverables.',
+        milestone: 'Interaction flow, prototype screens, core mechanics, presentation deck.',
+        cover: 'assets/neuragaze.jpg',
+        tags: ['VisionOS', 'XR', 'Prototype'],
+        categories: ['xr'],
+        status: 'past',
+        play: LINKEDIN_PROJECTS,
+        code: ''
+      },
+
       {
         title: 'Interactive Comedy Sound Board',
         blurb: 'Playful Unity prototype that turns button presses into tiny performances with juicy feedback.',
@@ -357,7 +379,7 @@
         tags: ['Design', 'Product'],
         categories: ['entrepreneurship'],
         status: 'past',
-        play: 'https://www.linkedin.com/in/laurenathoman/details/projects/',
+        play: LINKEDIN_PROJECTS,
         code: ''
       },
       {
@@ -367,7 +389,7 @@
         tags: ['Board game', 'Design'],
         categories: ['boardgame'],
         status: 'past',
-        play: 'https://www.linkedin.com/in/laurenathoman/details/projects/',
+        play: LINKEDIN_PROJECTS,
         code: ''
       },
       {
@@ -377,7 +399,7 @@
         tags: ['Board game', 'Party', 'Design', 'Graphic'],
         categories: ['boardgame'],
         status: 'past',
-        play: 'https://www.linkedin.com/in/laurenathoman/details/projects/',
+        play: LINKEDIN_PROJECTS,
         code: ''
       }
     ];
@@ -391,7 +413,7 @@
         const card = document.createElement('article');
         card.className = 'card';
         card.innerHTML = `
-          <div class="thumb"><img src="${p.cover || PLACEHOLDER}" alt="${p.title} cover" loading="lazy" onerror="this.src=PLACEHOLDER"></div>
+          <div class="thumb"><img src="${p.cover || PLACEHOLDER}" alt="${p.title} cover" loading="lazy" onerror="this.src='${PLACEHOLDER}'"></div>
           <div class="card-body">
             <h3>${p.title}</h3>
             <div class="tags">${(p.tags || []).map(t => `<span class='tag'>${t}</span>`).join('')}</div>
@@ -420,7 +442,6 @@
       renderCards(projectGrid, items);
     }
 
-    // Filters
     document.querySelectorAll('.filters [data-filter]').forEach(btn => {
       btn.addEventListener('click', () => {
         document.querySelectorAll('.filters .btn').forEach(b => b.classList.remove('active'));
@@ -430,7 +451,6 @@
       });
     });
 
-    // First render
     renderCurrent();
     renderProjects('all');
   </script>
