--- a/laurenthoman-site/index.html
+++ b/laurenthoman-site/index.html
@@ -118,6 +118,7 @@
       .card { grid-column: span 12 }
       .statbar { grid-template-columns: 1fr 1fr }
     }
+
     .filters { display: flex; flex-wrap: wrap; gap: 8px; margin: 8px 0 16px }
     .btn.active { outline: 2px solid rgba(245,158,11,0.75) }
     .btn { padding: 10px 14px; font-size: 0.95rem }
@@ -166,7 +167,7 @@
       </div>
       <div class="hero-card">
         <div class="thumb" aria-label="featured project image">
-          <img src="assets/hero-img.jpg" alt="Hero image representing XR and game design" onerror="this.src=PLACEHOLDER" />
+          <img src="assets/hero-img.jpg" alt="Hero image representing XR and game design" />
         </div>
         <div class="statbar">
           <div class="stat"><strong>4</strong><span>playable builds</span></div>
@@ -216,11 +217,11 @@
       <div class="panel">
         <h3>Currently exploring</h3>
         <ul>
-          <li><strong>Snap Spectacles Prototyping, ACAD 207:</strong> Iovine and Young Academy course led by Carsten Becker; semester long collaboration with Snap to prototype immersive narrative driven experiences and apps using Snap Spectacles and Lens Studio.</li>
-          <li><strong>Visual Effects Workflow, School of Cinematic Arts:</strong> learning the full VFX pipeline with Photoshop, Maya, and Nuke; designing and compositing original shots for class deliverables.</li>
+          <li><strong>ACAD 207, Snap Spectacles prototyping:</strong> Collaborating with Snap, designing and prototyping wearable AR experiences in Lens Studio across the semester.</li>
+          <li><strong>CTAN 462, Visual Effects Creation:</strong> Building original VFX shots and learning workflow across Photoshop, Maya, and Nuke.</li>
         </ul>
         <h3 style="margin-top:12px">Recognition</h3>
-        <p>Indie jam showcases, class critiques and demos, campus exhibitions, collaborative studio presentations.</p>
+        <p>Indie jam showcases, campus demo days, community features.</p>
       </div>
     </section>
 
@@ -261,27 +262,27 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    const PLACEHOLDER = 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1600" height="900" viewBox="0 0 1600 900"><defs><linearGradient id="g" x1="0" y1="0" x2="1" y2="1"><stop stop-color="%230b1220"/><stop offset="1" stop-color="%2310213a"/></linearGradient></defs><rect fill="url(%23g)" width="1600" height="900"/><text x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle" fill="%2394a3b8" font-family="Inter,Arial,sans-serif" font-size="32">Project cover</text></svg>';
+    window.PLACEHOLDER = 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1600" height="900" viewBox="0 0 1600 900"><defs><linearGradient id="g" x1="0" y1="0" x2="1" y2="1"><stop stop-color="%230b1220"/><stop offset="1" stop-color="%2310213a"/></linearGradient></defs><rect fill="url(%23g)" width="1600" height="900"/><text x="50%25" y="50%25" dominant-baseline="middle" text-anchor="middle" fill="%2394a3b8" font-family="Inter,Arial,sans-serif" font-size="32">Cover image</text></svg>';
 
     const LINKEDIN_PROJECTS = 'https://www.linkedin.com/in/laurenathoman/details/projects/';
 
     const projects = [
       {
-        title: 'Snap Spectacles Prototyping, ACAD 207',
-        blurb: 'Semester long collaboration with Snap to prototype immersive narrative driven experiences and experimental apps using Snap Spectacles and Lens Studio.',
-        milestone: 'Concept pitches, interaction prototypes, rapid iteration, user testing and weekly builds.',
-        cover: 'assets/snap-spectacles.jpg',
-        tags: ['Lens Studio', 'Snap Spectacles', 'Prototype'],
+        title: 'Snap Spectacles, ACAD 207',
+        blurb: 'Iovine and Young Academy course with Professor Carsten Becker, collaborating with Snap to prototype wearable experiences and apps for Snap Spectacles in Lens Studio.',
+        milestone: 'Concept pitches, interaction tests, iterative Lens Studio prototypes, weekly playtests.',
+        cover: 'assets/snap-spectacles-cover.jpg',
+        tags: ['Lens Studio', 'AR', 'Wearables'],
         categories: ['current','xr'],
         status: 'current',
         play: LINKEDIN_PROJECTS,
         code: ''
       },
       {
-        title: 'Visual Effects Workflow, SCA',
-        blurb: 'Learning the full VFX pipeline and shot workflow, from planning to compositing, using Photoshop, Maya, and Nuke to build original effects shots.',
-        milestone: 'Green screen fundamentals, roto and paint, matchmove basics, compositing passes, final shot polish.',
-        cover: 'assets/vfx-workflow.jpg',
+        title: 'Visual Effects Shots, CTAN 462',
+        blurb: 'School of Cinematic Arts VFX course with Professor Eric Hanson, creating original shots while learning a modern visual effects workflow.',
+        milestone: 'Compositing exercises, matchmove and tracking, green screen work, first original VFX shots.',
+        cover: 'assets/vfx-shot-cover.jpg',
         tags: ['Nuke', 'Maya', 'Photoshop'],
         categories: ['current','film'],
         status: 'current',
@@ -293,7 +294,7 @@
         title: 'Reflections',
         blurb: 'Final project for Intermediate Game Design and Production, built with a partner across the semester in Unity, focused on clean feel, readable signals, and rapid iteration.',
         milestone: 'Title screen, movement polish, first pass art, menu UI, narrative beats.',
-        cover: 'assets/reflections.jpg',
+        cover: 'assets/reflections-cover.jpg',
         tags: ['Unity', 'C#', 'Design'],
         categories: ['games'],
         status: 'past',
@@ -304,7 +305,7 @@
         title: 'NeuraGaze, Apple Vision Pro App Prototype',
         blurb: 'VisionOS prototype exploring gaze based interaction and spatial UI, designed and pitched as a team concept with iterative testing and presentation deliverables.',
         milestone: 'Interaction flow, prototype screens, core mechanics, presentation deck.',
-        cover: 'assets/neuragaze.jpg',
+        cover: 'assets/neuragaze-cover.jpg',
         tags: ['VisionOS', 'XR', 'Prototype'],
         categories: ['xr'],
         status: 'past',
@@ -413,7 +414,14 @@
         const card = document.createElement('article');
         card.className = 'card';
         card.innerHTML = `
-          <div class="thumb"><img src="${p.cover || PLACEHOLDER}" alt="${p.title} cover" loading="lazy" onerror="this.src='${PLACEHOLDER}'"></div>
+          <div class="thumb">
+            <img
+              src="${p.cover || window.PLACEHOLDER}"
+              alt="${p.title} cover"
+              loading="lazy"
+              onerror="this.onerror=null; this.src=window.PLACEHOLDER;"
+            >
+          </div>
           <div class="card-body">
             <h3>${p.title}</h3>
             <div class="tags">${(p.tags || []).map(t => `<span class='tag'>${t}</span>`).join('')}</div>
