--- a/laurenthoman-site/index.html
+++ b/laurenthoman-site/index.html
@@ -298,7 +298,7 @@
         tags: ['Unity', 'C#', 'Design'],
         categories: ['games'],
         status: 'past',
-        play: LINKEDIN_PROJECTS,
+        play: 'https://lauren-thoman.itch.io/reflections',
         code: ''
       },
       {
